Fix checkbox styling on safari

--- a/css/_input-types.scss
+++ b/css/_input-types.scss
@@ -6,6 +6,7 @@ input[type=search] {
 input[type=checkbox] {
   width: 0;
   height: 0;
+  display: none;
   &:checked + label {
     background-color: cornflowerblue;
     color: white;
